Fix contrast

--- a/Lab4.css
+++ b/Lab4.css
@@ -92,11 +92,12 @@ aside {
 
 footer {
     grid-area: footer;
-    background-color: #3e8563;
+    background-color: #2b4738; /* Darker green for higher contrast */
     color: white;
     text-align: center;
     padding: 0.5em;
 }
+
 
 .sr-only {
     position: absolute;
